# game_console

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build_simulation.sh  makefile  prepare_arduino_project.sh  run.sh  snake_poc.py  space_game_poc.py
adafruit_driver/: Adafruit_GFX.h  Adafruit_PCD8544.cpp  Adafruit_PCD8544.h
adafruit_driver/examples/GFXcanvas/: GFXcanvas.ino
games_PoC/: tower_poc.py
libs/adafruit_driver/: Adafruit_PCD8544.cpp
libs/adafruit_driver/examples/GFXcanvas/: GFXcanvasSerialDemo.cpp
python_lcd_simulation/: lcd_sim.py  run_lcd_sim.py
src/: ArduinoCore-x86.cpp  Arkanoid.hpp  Battery.hpp  Buttons.cpp  Buttons.h  Maze.hpp  arkanoid.cpp  arkanoid2.cpp_  fake_display.h  gameAPI.h  game_execution.cpp  games.h  lcd_demo.cpp  lcd_demo.cpp_  lcd_demo.h_  main.cpp  main_menu.cpp  menu.cpp  menu.hpp  my_gui.h  my_user_input.cpp  my_user_input.cpp_  my_user_input.h  my_user_input.h_  pong.cpp_  pong.hpp  remote_sw_update.cpp  src.ino
src/games/: pong.hpp  snake.hpp  towers.hpp
src/games/space_game/: enemy.hpp  player.hpp  projectile.hpp  space_game.cpp  space_game.hpp  stars.hpp  structures.hpp
src/menu/: analog_voltage_demo.cpp  analog_voltage_demo.hpp  keyboard.cpp  keyboard.hpp  menu.hpp  menu_item.cpp  menu_item.hpp  screen_boolean_input.hpp  screen_item_select.hpp  screen_number_input.hpp
src/wifi/: remote_sw_update.hpp  wifi_features.cpp  wifi_features.hpp
src/x86/: ArduinoCore-x86.cpp  fake_display.h
test_of_collision_detection/: arkanoid.py
